--- a/favorite-episode/favorite-episode/favorite-episode.csproj
+++ b/favorite-episode/favorite-episode/favorite-episode.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="gilmoregirls.json" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
