--- a/favorite-episode/favorite-episode/favorite-episode.csproj
+++ b/favorite-episode/favorite-episode/favorite-episode.csproj
@@ -37,12 +37,16 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Program.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Episode.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="gilmoregirls.json" />
+    <None Include="gilmoregirls.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
