--- a/favorite-episode/favorite-episode.csproj
+++ b/favorite-episode/favorite-episode.csproj
@@ -35,6 +35,7 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Drawing" />
+    <Reference Include="nunit.framework" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs">
@@ -42,6 +43,10 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Episode.cs" />
+    <Compile Include="Review.cs" />
+    <Compile Include="Reviews.cs" />
+    <Compile Include="IOpinion.cs" />
+    <Compile Include="Show.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="gilmoregirls.json">
